# designer

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  codecov.yml
.github/workflows/: audit.yml  ci.yml  clippy.yml  test.yml
src/: converter.rs  main.rs
src/cli/: command_line_option.rs  mod.rs
src/decoder/: image.rs  mod.rs
src/tests/: command_line_option_test.rs  converter_test.rs  decoder_image_test.rs  mod.rs  test_helpers.rs
src/tests/fixtures/: image-fixture-hex.txt  image-fixture-rgb.txt
