[package]
name = "designer"
version = "0.1.0"
description = "Does nice things with images, colors and generate palette colors too"
authors = ["Bruno Arueira <contato@brunoarueira.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
color-thief = "*"
failure = "*"
image = "*"
